--- a/dahome/src/main/resources/static/footer.html
+++ b/dahome/src/main/resources/static/footer.html
@@ -1,10 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="footer-newsletter" style="display: none">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <h4>Our Newsletter</h4>
+                <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            </div>
+            <div class="col-lg-6">
+                <form action="" method="post">
+                    <input type="email" name="email"><input type="submit" value="Subscribe">
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-</body>
-</html>
+<div class="footer-top">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-lg-3 col-md-6 footer-links">
+                <h4>链接</h4>
+                <ul>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">首页</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">关于我们</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">服务</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">案例</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">团队</a></li>
+                </ul>
+            </div>
+
+            <div class="col-lg-3 col-md-6 footer-links">
+                <h4>服务</h4>
+                <ul>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">数据标注</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">数据采集</a></li>
+                </ul>
+            </div>
+
+            <div class="col-lg-3 col-md-6 footer-contact">
+                <h4>联系我们</h4>
+                <p>
+                    广东省 <br>
+                    广州市<br>
+                    番禺区天安科技园总部24号楼<br><br>
+                    <strong>Phone:</strong> +182 1066 1759<br>
+                    <strong>Email:</strong>891449056@qq.com<br>
+                </p>
+
+            </div>
+
+            <div class="col-lg-3 col-md-6 footer-info">
+                <h3>关于我们</h3>
+                <p>智慧数据标注科技有限公司，专注于提供标准数据标注和数据采集服务，让天下没有难做的人工智能</p>
+                <div class="social-links mt-3">
+                    <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                    <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                    <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                    <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="copyright">
+        &copy; Copyright <strong><span>智慧数据标注科技有限公司</span></strong>. All Rights Reserved
+    </div>
+    <div class="credits" style="display:none;">More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
+    </div>
+</div>
