--- a/dahome/src/main/resources/static/index.html
+++ b/dahome/src/main/resources/static/index.html
@@ -42,7 +42,8 @@
       <div class="carousel-item active">
         <div class="carousel-container">
           <p class="animated fadeInDown">欢迎来到 <span>智慧数据标注</span></p>
-          <h2 class="animated fadeInUp">8年AI数据标注及数据采集经验</h2>
+          <h2 class="animated fadeInUp">低成本高效率</h2>
+          <h2 class="animated fadeInUp">提供标准数据标注和数据采集服务</h2>
           <a href="" class="btn-get-started animated fadeInUp">更多</a>
         </div>
       </div>
@@ -53,15 +54,6 @@
           <h2 class="animated fadeInDown">以客户为中心</h2>
           <p class="animated fadeInUp">全国10000+标注员、30+标注工厂，为您的AI保驾护航.</p>
           <a href="" class="btn-get-started animated fadeInUp">更多</a>
-        </div>
-      </div>
-
-      <!-- Slide 3 -->
-      <div class="carousel-item">
-        <div class="carousel-container">
-          <h2 class="animated fadeInDown">Sequi ea ut et est quaerat</h2>
-          <p class="animated fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="" class="btn-get-started animated fadeInUp">Read More</a>
         </div>
       </div>
 
@@ -88,32 +80,64 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-pink">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">图像语意分割</a></h4>
+              <p class="description">图像语义分割是基于区域的多边形标注，对复杂不规则的图片进行区域划分并标注对应属性，助力图像识别模型训练，多应用于人体分割、场景分割和自动驾驶道路分割，可应用于智能驾驶、智能设备、智能安防场景落地。</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-cyan">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4 class="title"><a href="">图片框选</a></h4>
+              <p class="description">图片框选可助力图像识别模型训练，用于框选图片中的识别主体目标，常见于对人脸、人体、障碍物、红绿灯的框选，可应用于智能驾驶、智能安防、智能设备的场景落地</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">人脸骨骼打点</a></h4>
+              <p class="description">人脸骨骼打点是基于点的标注，多应用于标注图片中人脸五官、人体骨骼关键点和汽车轮胎接地点，助力于图像识别模型训练，可应用于智能驾驶、智能设备、智能安防场景落地。</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">3D点云</a></h4>
+              <p class="description">3D点云标注可助力自动驾驶模型的训练，可对3D障碍物进行框选、对雷达图进行语义分割，帮助车辆更好的感知路面，可应用于自动驾驶场景的训练落地</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box icon-box-blue">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="">图片分类</a></h4>
+              <p class="description">可实现千万量级的图片清洗分类，依据您的需求可对您提供的图片集做属性归类，助力图像识别模型训练，可应用于智慧零售、智能设备、智能文娱等场景。</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box icon-box-blue">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="">连续帧标注</a></h4>
+              <p class="description">连续帧标注常用于自动驾驶及视频图像识别模型的训练，通过对视频进行抽帧，并对每一帧图片中的目标物体进行连续标注，可应用于智能驾驶、智能安防、智能设备的场景落地</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box icon-box-blue">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="">视频分类</a></h4>
+              <p class="description">视频分类是通过观看视频片段对视频按主题进行分类，助力建立视频资料库，常用于视频行业的图像识别模型训练，可应用于智慧文娱场景的落地</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box icon-box-blue">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="">视频内容提取</a></h4>
+              <p class="description">视频内容提取是对视频进行抽帧，并对每一帧画面里的字幕进行转写，对视频主题进行归纳提取，助力建立视频资料库，常用于视频行业的图像识别模型训练，可应用于智慧文娱场景的落地</p>
             </div>
           </div>
 
@@ -128,33 +152,81 @@
 
         <div class="row">
           <div class="col-lg-6 video-box">
-            <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <img src="assets/img/picsplit.jpg" class="img-fluid" alt="">
+            <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">图像语意分割</a></h4>
+              <p class="description">图像语义分割是基于区域的多边形标注，对复杂不规则的图片进行区域划分并标注对应属性，助力图像识别模型训练，多应用于人体分割、场景分割和自动驾驶道路分割，可应用于智能驾驶、智能设备、智能安防场景落地。</p>
             </div>
 
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-gift"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
+            <!--<div class="icon-box">-->
+              <!--<div class="icon"><i class="bx bx-gift"></i></div>-->
+              <!--<h4 class="title"><a href="">Nemo Enim</a></h4>-->
+              <!--<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>-->
+            <!--</div>-->
 
           </div>
-        </div>
+        </div><!-- row-->
+
+
+        <div class="row">
+          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-face"></i></div>
+              <h4 class="title"><a href="">图片框选</a></h4>
+              <p class="description">图片框选可助力图像识别模型训练，用于框选图片中的识别主体目标，常见于对人脸、人体、障碍物、红绿灯的框选，可应用于智能驾驶、智能安防、智能设备的场景落地</p>
+            </div>
+            <!--<div class="icon-box">-->
+            <!--<div class="icon"><i class="bx bx-gift"></i></div>-->
+            <!--<h4 class="title"><a href="">Nemo Enim</a></h4>-->
+            <!--<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>-->
+            <!--</div>-->
+
+          </div>
+
+          <div class="col-lg-6 video-box">
+            <img src="assets/img/图片框选.gif" class="img-fluid" alt="">
+            <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
+          </div>
+
+        </div><!-- row-->
+
+        <div class="row">
+          <div class="col-lg-6 video-box">
+            <img src="assets/img/picsplit.jpg" class="img-fluid" alt="">
+            <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
+          </div>
+
+          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-anchor"></i></div>
+              <h4 class="title"><a href="">人脸骨骼打点</a></h4>
+              <p class="description">人脸骨骼打点是基于点的标注，多应用于标注图片中人脸五官、人体骨骼关键点和汽车轮胎接地点，助力于图像识别模型训练，可应用于智能驾驶、智能设备、智能安防场景落地。</p>
+            </div>
+
+            <!--<div class="icon-box">-->
+            <!--<div class="icon"><i class="bx bx-gift"></i></div>-->
+            <!--<h4 class="title"><a href="">Nemo Enim</a></h4>-->
+            <!--<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>-->
+            <!--</div>-->
+
+          </div>
+        </div><!-- row-->
 
       </div>
+
+
     </section><!-- End Why Us Section -->
-    <div class="tlinks">Collect from <a href="http://www.cssmoban.com/"  title="网站模板">网站模板</a></div>
+    <div class="tlinks" style="display: none">Collect from <a href="http://www.cssmoban.com/"  title="网站模板">网站模板</a></div>
 
     <!-- ======= Features Section ======= -->
-    <section class="features">
+    <section class="features"  style="display: none">
       <div class="container">
 
         <div class="section-title">
@@ -237,83 +309,6 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
-
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-          </div>
-          <div class="col-lg-6">
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
-            <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
-            </p>
-
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Moderna</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-            <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Moderna</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
-      </div>
-    </div>
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
@@ -335,6 +330,7 @@
 
   <script type="text/javascript">
       $("#header1").load("header.html");
+      $("#footer").load("footer.html");
   </script>
 </body>
 
