修改页头和页尾

--- a/dahome/src/main/resources/static/blog.html
+++ b/dahome/src/main/resources/static/blog.html
@@ -438,7 +438,11 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <script type="text/javascript">
+      $("head").load("head.html");
+      $("#header").load("header.html");
+      $("#footer").load("footer.html");
+  </script>
 </body>
 
 </html>
