--- a/dahome/src/main/resources/static/about.html
+++ b/dahome/src/main/resources/static/about.html
@@ -34,7 +34,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header1"></header><!-- End Header -->
+  <header id="header"></header><!-- End Header -->
 
   <main id="main">
 
@@ -326,7 +326,9 @@
   <script src="assets/js/main.js"></script>
 
   <script type="text/javascript">
-      $("#header1").load("header.html");
+      $("head").load("head.html");
+      $("#header").load("header.html");
+      $("#footer").load("footer.html");
   </script>
 </body>
 
