修改首页服务展示

--- a/dahome/src/main/resources/static/index.html
+++ b/dahome/src/main/resources/static/index.html
@@ -70,8 +70,8 @@
   <main id="main">
 
     <!-- ======= Services Section ======= -->
-    <section class="services">
-      <div class="container">
+    <section class="services" style="display: none">
+      <div class="container" >
 
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up">
@@ -144,8 +144,15 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Why Us Section ======= -->
-    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
-      <div class="container">
+    <section class="services" data-aos="fade-up" date-aos-delay="200">
+
+      <div id="biaozhuservice"></div>
+
+      <div class="container" style="display: none">
+
+        <div class="section-title">
+          <h2>数据标注服务</h2>
+        </div>
 
         <div class="row">
           <div class="col-lg-6 video-box">
@@ -195,7 +202,7 @@
 
         <div class="row">
           <div class="col-lg-6 video-box">
-            <img src="assets/img/picsplit.jpg" class="img-fluid" alt="">
+            <img src="assets/img/人脸打点.gif" class="img-fluid" alt="">
             <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
           </div>
 
@@ -215,6 +222,130 @@
 
           </div>
         </div><!-- row-->
+
+        <div class="row">
+
+
+          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-anchor"></i></div>
+              <h4 class="title"><a href="">3D点云</a></h4>
+              <p class="description">3D点云标注可助力自动驾驶模型的训练，可对3D障碍物进行框选、对雷达图进行语义分割，帮助车辆更好的感知路面，可应用于自动驾驶场景的训练落地</p>
+            </div>
+
+            <!--<div class="icon-box">-->
+            <!--<div class="icon"><i class="bx bx-gift"></i></div>-->
+            <!--<h4 class="title"><a href="">Nemo Enim</a></h4>-->
+            <!--<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>-->
+            <!--</div>-->
+
+          </div>
+
+          <div class="col-lg-6 video-box">
+            <img src="assets/img/人脸打点.gif" class="img-fluid" alt="">
+            <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
+          </div>
+
+        </div><!-- row-->
+
+        <div class="row">
+          <div class="col-lg-6 video-box">
+            <img src="assets/img/人脸打点.gif" class="img-fluid" alt="">
+            <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
+          </div>
+
+          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-anchor"></i></div>
+              <h4 class="title"><a href="">图片分类</a></h4>
+              <p class="description">可实现千万量级的图片清洗分类，依据您的需求可对您提供的图片集做属性归类，助力图像识别模型训练，可应用于智慧零售、智能设备、智能文娱等场景。</p>
+            </div>
+
+            <!--<div class="icon-box">-->
+            <!--<div class="icon"><i class="bx bx-gift"></i></div>-->
+            <!--<h4 class="title"><a href="">Nemo Enim</a></h4>-->
+            <!--<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>-->
+            <!--</div>-->
+
+          </div>
+        </div><!-- row-->
+
+
+        <div class="row">
+
+
+          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-anchor"></i></div>
+              <h4 class="title"><a href="">连续帧标注</a></h4>
+              <p class="description">连续帧标注常用于自动驾驶及视频图像识别模型的训练，通过对视频进行抽帧，并对每一帧图片中的目标物体进行连续标注，可应用于智能驾驶、智能安防、智能设备的场景落地</p>
+            </div>
+
+            <!--<div class="icon-box">-->
+            <!--<div class="icon"><i class="bx bx-gift"></i></div>-->
+            <!--<h4 class="title"><a href="">Nemo Enim</a></h4>-->
+            <!--<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>-->
+            <!--</div>-->
+
+          </div>
+
+          <div class="col-lg-6 video-box">
+            <img src="assets/img/人脸打点.gif" class="img-fluid" alt="">
+            <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
+          </div>
+        </div><!-- row-->
+
+        <div class="row">
+          <div class="col-lg-6 video-box">
+            <img src="assets/img/人脸打点.gif" class="img-fluid" alt="">
+            <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
+          </div>
+
+          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-anchor"></i></div>
+              <h4 class="title"><a href="">视频分类</a></h4>
+              <p class="description">视频分类是通过观看视频片段对视频按主题进行分类，助力建立视频资料库，常用于视频行业的图像识别模型训练，可应用于智慧文娱场景的落地</p>
+            </div>
+
+            <!--<div class="icon-box">-->
+            <!--<div class="icon"><i class="bx bx-gift"></i></div>-->
+            <!--<h4 class="title"><a href="">Nemo Enim</a></h4>-->
+            <!--<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>-->
+            <!--</div>-->
+
+          </div>
+        </div><!-- row-->
+
+        <div class="row">
+
+
+          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-anchor"></i></div>
+              <h4 class="title"><a href="">视频内容提取</a></h4>
+              <p class="description">视频内容提取是对视频进行抽帧，并对每一帧画面里的字幕进行转写，对视频主题进行归纳提取，助力建立视频资料库，常用于视频行业的图像识别模型训练，可应用于智慧文娱场景的落地</p>
+            </div>
+
+            <!--<div class="icon-box">-->
+            <!--<div class="icon"><i class="bx bx-gift"></i></div>-->
+            <!--<h4 class="title"><a href="">Nemo Enim</a></h4>-->
+            <!--<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>-->
+            <!--</div>-->
+
+          </div>
+
+          <div class="col-lg-6 video-box">
+            <img src="assets/img/人脸打点.gif" class="img-fluid" alt="">
+            <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
+          </div>
+        </div><!-- row-->
+
 
       </div>
 
@@ -329,6 +460,7 @@
       $("head").load("head.html");
       $("#header").load("header.html");
       $("#footer").load("footer.html");
+      $("#biaozhuservice").load("biaozhuservices.html");
   </script>
 </body>
 
